--- a/pages/index.css
+++ b/pages/index.css
@@ -1,1 +1,77 @@
 @import url(../vendor/normalize.css);
+@import url(../vendor/fonts.css);
+@import url(../blocks/root/root.css);
+
+.root {
+  background-color: #000;
+  min-width: 320px;
+  max-width: 1280px;
+  margin: auto;
+  border: 2px solid red;
+  font-family: 'Inter', Arial, sans-serif;
+}
+
+.header {
+  max-width: 69%;
+  margin: 45px auto 40px;
+  min-height: 74px;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  border: 2px solid greenyellow;
+}
+
+.header__logo {
+  width: 142px;
+}
+
+.profile {
+  max-width: 69%;
+  margin: 0 auto 50px;
+  border: 2px solid gold;
+  display: flex;
+  color: white;
+}
+
+.profile__avatar {
+  max-width: ;
+}
+
+.profile__info {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+  'name button'
+  'activity .';
+  gap: 18px 16px;
+  border: 2px solid greenyellow;
+  max-height: 60px;
+}
+.profile__name {
+  font-size: 42px;
+  line-height: 1.14;
+  font-weight: 600;
+  grid-area: name;
+  margin: 0;
+}
+
+.profile__activity {
+  font-size: 18px;
+  line-height: auto;
+  font-weight: normal;
+  grid-area: activity;
+  margin: 0;
+}
+
+.profile__editButton {
+  width: 22px;
+  height: 22px;
+  border: 1px solid white;
+  display: flex;
+  grid-area: button;
+  margin-top: auto;
+}
+
+.profile__editPan {
+  width: 10px;
+  margin: auto;
+}
