--- a/pages/index.css
+++ b/pages/index.css
@@ -2,141 +2,34 @@
 @import url(../vendor/fonts.css);
 @import url(../blocks/root/root.css);
 
-.root {
-  background-color: #000;
-  min-width: 320px;
-  max-width: 1280px;
-  margin: auto;
-  font-family: 'Inter', Arial, sans-serif;
-}
+/* Header */
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 
-.header {
-  max-width: 69%;
-  margin: 45px auto 40px;
-  min-height: 74px;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
-}
+/* Profile */
+@import url(../blocks/profile/profile.css);
 
-.header__logo {
-  width: 142px;
-}
+@import url(../blocks/profile/__avatar/profile__avatar.css);
 
-.profile {
-  max-width: 69%;
-  margin: 0 auto 50px;
-  display: flex;
-  color: white;
-  align-items: center;
-  position: relative;
-}
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__name/profile__name.css);
+@import url(../blocks/profile/__activity/profile__activity.css);
 
-.profile__avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 60px;
-  background-image: url(../Images/profileAvatar.jpg);
-}
+@import url(../blocks/profile/__editButton/profile__editButton.css);
+@import url(../blocks/profile/__editPan/profile__editPan.css);
 
-.profile__info {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  grid-template-areas:
-  'name button'
-  'activity .';
-  gap: 10px 20px;
-  max-height: 60px;
-  margin-left: 30px;
-  position: relative;
-  bottom: 10px;
-}
-.profile__name {
-  font-size: 42px;
-  line-height: 1.14;
-  font-weight: 600;
-  grid-area: name;
-  margin: 0;
-}
+@import url(../blocks/profile/__addButton/profile__addButton.css);
+@import url(../blocks/profile/__plus/profile__plus.css);
 
-.profile__activity {
-  font-size: 18px;
-  line-height: auto;
-  font-weight: normal;
-  grid-area: activity;
-  margin: 0;
-}
+/* Elements */
+@import url(../blocks/elements/elements.css);
 
-.profile__editButton {
-  width: 22px;
-  height: 22px;
-  border: 1px solid white;
-  display: flex;
-  grid-area: button;
-  margin-top: 15px;
-}
+@import url(../blocks/element/element.css);
 
-.profile__editPan {
-  width: 10px;
-  margin: auto;
-}
+@import url(../blocks/element/__plank/element__plank.css);
+@import url(../blocks/element/__name/element__name.css);
+@import url(../blocks/element/__like/element__like.css);
 
-.profile__addButton {
-  display: flex;
-  width: 150px;
-  height: 50px;
-  border: 1px solid white;
-  justify-content: center;
-  position: absolute;
-  right: 0;
-}
-
-.profile__plus {
-  width: 22px;
-}
-
-.elements {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
-  margin: auto;
-  gap: 22px 20px;
-  max-width: 69%;
-}
-
-.element {
-  display: flex;
-  flex-direction: column;
-  max-width: 282px;
-  border-radius: 10px;
-  overflow: hidden;
-  margin: auto;
-}
-
-.element__plank {
-  background-color: white;
-  color: #000;
-  display: flex;
-  justify-content: space-between;
-}
-
-.element__name {
-  font-size: 24px;
-  font-weight: 900;
-  margin-left: 20px;
-}
-
-.element__like {
-  margin-right: 20px;
-  width: 22px;
-}
-
-.footer__copyright {
-  font-size: 18px;
-  font-weight: normal;
-  color: #545454;
-}
-
-.footer {
-  max-width: 69%;
-  margin: 72px auto 60px;
-}
+/* Footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
