--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -7,7 +7,7 @@
   background-image: url(../../../Images/likeInactiv.svg);
   object-fit: contain;
   border: none;
-  transition: opacity 0.3s;
+  transition: opacity .3s;
 }
 
 .element__like:hover {
