--- a/blocks/popup/__closeButton/popup__closeButton.css
+++ b/blocks/popup/__closeButton/popup__closeButton.css
@@ -8,6 +8,7 @@
   top: -41px;
   transition: opacity .3s;
   padding: 0;
+  background-image: url(../../../Images/closeIcon.svg);
 }
 
 .popup__closeButton:hover {
@@ -21,7 +22,6 @@
     height: 20px;
     right: 0;
     top: -36px;
-
   }
 }
 
