--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,10 +6,10 @@
   'name button'
   'activity .';
   gap: 10px 20px;
-  /*max-height: 60px;*/
   margin-left: 30px;
   position: relative;
   bottom: 10px;
+  margin-top: 15px;
 }
 
 @media screen and (max-width: 350px) {
