--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,4 +1,8 @@
 .root {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
   background-color: #000;
   min-width: 320px;
   max-width: 1280px;
