fix: подправлены замечания ревьювера

--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.popup__closeButton {
+.popup__close-button {
   background-color: rgba(0, 0, 0, .0);
   border: none;
   position: absolute;
@@ -9,17 +9,19 @@
   transition: opacity .3s;
   padding: 0;
   background-image: url(../../../Images/closeIcon.svg);
+  object-fit: contain;
+  background-position: center;
 }
 
-.popup__closeButton:hover {
+.popup__close-button:hover {
   opacity: 60%;
   cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
-  .popup__closeButton {
-    width: 20px;
-    height: 20px;
+  .popup__close-button {
+    width: 22px;
+    height: 22px;
     right: 0;
     top: -36px;
   }
