--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.popup__saveButton {
+.popup__save-button {
   background-color: black;
   color: white;
   font-size: 18px;
@@ -8,13 +8,13 @@
   transition: background-color .3s;
 }
 
-.popup__saveButton:hover {
+.popup__save-button:hover {
   cursor: pointer;
   background-color: rgba(0, 0, 0, .8);
 }
 
 @media screen and (max-width: 600px) {
-  .popup__saveButton {
+  .popup__save-button {
     width: 238px;
     font-size: 14px;
     height: 46px;
