--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -2,19 +2,13 @@
   width: 100%;
   z-index: 2;
   background-color: rgba(0, 0, 0, .5);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   text-align: center;
   display: none;
-  padding-top: 195px;
   justify-content: center;
-}
-
-@media screen and (max-width: 600px) {
-  .popup {
-    padding-top: 123px;
-  }
+  align-items: center;
 }
