--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile__addButton {
+.profile__add-button {
   display: flex;
   width: 150px;
   height: 50px;
@@ -11,15 +11,16 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 22px;
+  background-color: rgba(0, 0, 0, .0);
 }
 
-.profile__addButton:hover {
+.profile__add-button:hover {
   opacity: 60%;
   cursor: pointer;
 }
 
 @media screen and (max-width: 670px) {
-  .profile__addButton {
+  .profile__add-button {
     position: static;
     width: 282px;
     margin-top: 20px;
