--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,4 +1,4 @@
-.profile__editButton {
+.profile__edit-button {
   width: 22px;
   height: 22px;
   border: 1px solid white;
@@ -9,15 +9,16 @@
   background-image: url(../../../Images/editPen.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-color: rgba(0, 0, 0, .0);
 }
 
-.profile__editButton:hover {
+.profile__edit-button:hover {
   opacity: 60%;
   cursor: pointer;
 }
 
 @media screen and (max-width: 350px) {
-  .profile__editButton {
+  .profile__edit-button {
     width: 18px;
     height: 18px;
     margin-top: 33px;
