fix: исправлены замечания ревьювера

--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -6,6 +6,8 @@
   height: 50px;
   margin-top: 22px;
   transition: background-color .3s;
+  border: none;
+  margin-bottom: 37px;
 }
 
 .popup__save-button:hover {
