--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -1,8 +1,15 @@
 .element__name {
   font-size: 24px;
   font-weight: 900;
-  margin-left: 20px;
+  margin: 29px auto 23px 21px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+@media screen and (max-width: 950px) {
+  .element__name {
+    margin-top: 25px;
+    margin-bottom: 27px;
+  }
 }
