--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,11 @@
 .header__logo {
   width: 142px;
+  margin-bottom: 36px;
 }
 
 @media screen and (max-width: 600px) {
   .header__logo {
+    margin-bottom: 20px;
     margin-left: 27px;
     width: 104px;
   }
