--- a/blocks/profile/__activity/profile__activity.css
+++ b/blocks/profile/__activity/profile__activity.css
@@ -3,10 +3,14 @@
   font-weight: normal;
   grid-area: activity;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 350px) {
   .profile__activity {
     font-size: 14px;
+    margin-left: 25px;
   }
 }
