--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -6,14 +6,15 @@
   'name button'
   'activity .';
   gap: 10px 20px;
-  margin-left: 30px;
   position: relative;
   bottom: 10px;
-  margin-top: 15px;
+  margin-top: 20px;
+
 }
 
 @media screen and (max-width: 350px) {
   .profile__info {
-    margin-top: 8px;
+    margin-top: 9px;
+    gap: 8px 10px;
   }
 }
