--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,14 +1,17 @@
 .profile {
   max-width: 69%;
   margin: 0 auto 50px;
-  display: flex;
   color: white;
   align-items: center;
   position: relative;
+  display: grid;
+  grid-template-columns: 150px 2fr 150px;
+
 }
 
 @media screen and (max-width: 950px) {
   .profile {
+    display: flex;
     flex-direction: column;
     text-align: center;
   }
@@ -16,13 +19,12 @@
 
 @media screen and (max-width: 670px) {
   .profile {
-    min-height: 286px;
     max-width: 100%;
   }
 }
 
 @media screen and (max-width: 350px) {
   .profile {
-    margin-bottom: 35px;
+    margin-bottom: 40px;
   }
 }
