--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,6 +17,12 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 950px) {
+  .profile__edit-button {
+    margin-top: 40px;
+  }
+}
+
 @media screen and (max-width: 540px) {
   .profile__edit-button {
     width: 18px;
