--- a/blocks/element/__name/element__name.css
+++ b/blocks/element/__name/element__name.css
@@ -5,6 +5,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 187px;
 }
 
 @media screen and (max-width: 950px) {
