--- a/pages/index.css
+++ b/pages/index.css
@@ -39,11 +39,31 @@
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
 
+.element__image {
+  width: 282px;
+  height: 282px;
+  position: relative;
+  overflow: hidden;
+}
+
+.element__trash {
+  background-image: url(../Images/trash.svg);
+  width: 18px;
+  height: 19px;
+  object-fit: cover;
+  position: absolute;
+  z-index: 2;
+  right: 20px;
+  top: 20px;
+  transition: opacity .3s;
+  background-repeat: no-repeat;
+}
 
 
-
-
-
+.element__trash:hover {
+opacity: 60%;
+cursor: pointer;
+}
 
 
 
