--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -8,7 +8,10 @@
   right: 0;
   bottom: 0;
   text-align: center;
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.2s linear;
 }
