--- a/pages/index.css
+++ b/pages/index.css
@@ -19,10 +19,15 @@
 @import url(../blocks/elements/elements.css);
 
 @import url(../blocks/element/element.css);
+@import url(../blocks/element/__image-container/element__image-container.css);
+@import url(../blocks/element/__image/element__image.css);
+@import url(../blocks/element/__trash/element__trash.css);
+
 
 @import url(../blocks/element/__plank/element__plank.css);
 @import url(../blocks/element/__name/element__name.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_status/element__like_status_active.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
@@ -37,43 +42,18 @@
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/_type/popup_type_image.css);
+
+/*Image-popup*/
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/__image/image-popup__image.css);
+@import url(../blocks/image-popup/__name/image-popup__name.css);
 
 
-.element__image-container {
-  width: 282px;
-  height: 282px;
-  position: relative;
-  overflow: hidden;
-  display: flex;
-}
-
-.element__image {
-  min-width: 100%;
-  min-height: 100%;
-}
-
-.element__trash {
-  background-image: url(../Images/trash.svg);
-  width: 18px;
-  height: 19px;
-  object-fit: cover;
-  position: absolute;
-  z-index: 2;
-  right: 20px;
-  top: 20px;
-  transition: opacity .3s;
-  background-repeat: no-repeat;
-}
 
 
-.element__trash:hover {
-opacity: 60%;
-cursor: pointer;
-}
 
-.element__like_status_active {
-  background-image: url(../../../Images/likeActive.svg);
-}
+
 
 
 
