--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,6 +1,7 @@
 .popup__heading {
   font-size: 24px;
   font-weight: 900;
+  margin-left: 36px;
   margin-top: 34px;
   margin-bottom: 42px;
   align-self: flex-start;
@@ -8,6 +9,7 @@
 
 @media screen and (max-width: 600px) {
   .popup__heading {
+    margin-left: 22px;
     font-size: 18px;
     margin-top: 28px;
     margin-bottom: 66px;
