--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -2,5 +2,31 @@
   width: 120px;
   height: 120px;
   border-radius: 60px;
-  background-image: url(../../../Images/profileAvatar.jpg);
+  background-position: center;
+  background-size: cover;
+}
+
+.profile__avatar::after{
+  visibility: hidden;
+  content: " ";
+  background-color: rgba(42, 44, 47, 0);
+  width: 100%;
+  height: 100%;
+  border-radius: 60px;
+  display: block;
+  overflow: hidden;
+  transition: background-color .5s;
+  background-image: url(../../../Images/editPen.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 26px 26px;
+  opacity: 0;
+  transition: opacity .5s;
+}
+
+.profile__avatar:hover::after {
+
+  opacity: 100%;
+  background-color: rgba(42, 44, 47, 0.8);
+  visibility: visible;
 }
