--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -49,12 +49,27 @@
 @import url(../blocks/popup/__save-button/_disabled/popup__save-button_disabled.css);
 @import url(../blocks/popup/__input/_type/popup__input_type_error.css);
 
+
 /*Image-popup*/
 @import url(../blocks/image-popup/image-popup.css);
 @import url(../blocks/image-popup/__image/image-popup__image.css);
 @import url(../blocks/image-popup/__name/image-popup__name.css);
 
+.element__like-container {
+  width: 22px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  margin-right: 20px;
+  align-items: center;
+}
 
+.element__like-counter {
+  margin: 0;
+  font-size: 13px;
+  font-weight: normal;
+  margin-top: 3px;
+}
 
 
 
